--- a/Kafle/stylesheet.css
+++ b/Kafle/stylesheet.css
@@ -18,7 +18,7 @@
 .bcgr {
     position: fixed;
     z-index: 1;
-    background-image: url('background.JPG');
+    background-image: url('/kafle/background.JPG');
     background-size: cover;
 }
 
@@ -66,7 +66,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(220, 0, 20, 0.90);
 }
 
     .view_link:hover {
@@ -78,7 +78,7 @@
         width: 100%;
         height: 98%;
         z-index: 99;
-        background-color: rgba(255, 255, 255, 0.3);
+        background-color: rgba(255, 255, 255, 0.90);
     }
 
     .view_link h1 {
@@ -103,10 +103,11 @@
         width: 100%;
     }
 
-.fotorama__wrap {
-    margin-left: auto;
-    margin-right: auto;
+.fotorama {
+    margin-left:auto;
+    margin-left:auto;
 }
+
 
 #map_canvas {
     opacity: 1;
@@ -121,33 +122,21 @@
     display: none;
 }
 
-#first > img, #second > img, #third > img, #fourth > img, #fifth > img {
-    padding: 0px;
-    box-shadow: 0px 0px 20px 5px rgb(0, 0, 0);
-    position: absolute;
-    opacity: 0.8;
-    z-index: 1;
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    height: 98%;
-    width: 100%;
-}
-
 #first .line {
     width: 100%;
     border-top: black 3px solid;
 }
 
 #first .view_content h1, #fifth .view_content h1,#second .view_content h1 {
-    text-shadow: 0px 0px 10px rgb(0, 0, 0);
+    text-shadow: 0px 0px 5px rgb(0, 0, 0);
     text-align: center;
 }
 #first .view_content p, #second .view_content p {
-    font-size:75%;
+    margin-left:40px;
+    margin-right:40px;
+    font-size:65%;
     text-align: center;
 }
-
 
 #fifth .view_content h1 {
     text-shadow: 0px 0px 10px rgb(0, 0, 0);
@@ -156,8 +145,12 @@
 #fifth .view_content p,#fifth .view_content h2, #fifth .view_content h3, #fifth .view_content ul {
     text-align: left;
     font-size: 75%;
-    margin:40px;
+    margin-left:40px;
+    margin-right:40px;
 }
 #second .view_content p {
-    font-size:150%;
+    font-size:130%;
+}
+#third .view_content,#fourth .view_content,#first .view_content,#second .view_content {
+    overflow-y:hidden;
 }
